--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@ body{
 hr {
     background-color: grey;
   }
+
+img {
+    display: block; 
+    margin: 0px auto; 
+}
+.description{
+    text-align: center;
+}
+.editor{
+    font-size: 20px;
+    height: 500px; 
+    width: 100%;
+}
+
 .title{
     color: black;
     text-align: center;
