기본 스타일 제작 완료!

--- a/border.css
+++ b/border.css
@@ -484,6 +484,9 @@
 .smallroundborder{
     border-radius: 4px;
 }
+.mediumroundborder{
+    border-radius: 6px;
+}
 .bigroundborder{
     border-radius: 8px;
 }
