--- a/font.css
+++ b/font.css
@@ -29,10 +29,10 @@
     text-transform: capitalize;
 }
 .xx-large{
-    font-size: large;
+    font-size: xx-large;
 }
 .x-large{
-    font-size: large;
+    font-size: x-large;
 }
 .large{
     font-size: large;
